Fixed sort/order flickering on load, fixed searchbox outline flickering on load, updated color scheme, slight adjustments to page layout

--- a/gallery.css
+++ b/gallery.css
@@ -1,34 +1,33 @@
 @charset "utf-8";
 
+html {
+    background-color: rgb(12,12,12);
+}
+
 body {
     background-color: #fff;
     display: grid;
     grid-template-areas:
-        "corn head"
+        "head head"
         "side main";
-    grid-template-rows: 2.75rem 1fr;
+    grid-template-rows: 3rem 1fr;
     grid-template-columns: 15rem 1fr;
     height: 100vh;
     margin: 0;
     font-family: Roboto, Arial, sans-serif;
 }
 
-.corner {
-    grid-area: corn;
-    z-index: 2;
-    background-color: rgb(44,44,44);
-}
-
 .header {
     grid-area: head;
-    z-index: 1;
-    background-color: rgb(44,44,44);
+    z-index: 3;
+    background-color: rgb(32,32,32);
     box-shadow: 0 0.1vw 0.4vw 0 rgba(0,0,0,0.32);
 }
+
 .sidebar {
     grid-area: side;
     z-index: 2;
-    background-color: rgb(32,32,32);
+    background-color: rgb(26,26,26);
     overflow:hidden;
     box-shadow: 0.1rem 0 0.4rem 0 rgba(0,0,0,0.32);
     pointer-events: auto;
@@ -67,7 +66,7 @@ body {
     grid-area: main;
     overflow-y: auto;
     padding: 1rem 3rem 1rem 3rem;
-    background-color: rgba(19,19,19);
+    background-color: rgba(12,12,12);
 }
 
 .grid {
@@ -318,18 +317,12 @@ img:after {
 }
 
 .explorer {
-    margin-top: 1.5rem;
-    color: rgba(200,200,200, 0.9);
+    margin-top: 0.5rem;
+    color: rgba(220,220,220, 0.6);
     display: grid;
     grid-template-rows: min-content 1fr;
     grid-column: 1 / -1;
     padding-left: 0.5rem;
-}
-
-.explorer-title {
-    margin-right: 0.25rem;
-    margin-bottom: 0.5rem;
-    margin-left: 0.25rem;
 }
 
 .explorer-scrollview {
@@ -348,8 +341,8 @@ img:after {
 }
 
 .explorer-box {
-    background-color: rgb(19,19,19);
-    height: 3rem;
+    background-color: rgb(12,12,12);
+    height: fit-content;
     box-shadow: inset 0 0.1rem 0.4rem 0 rgba(0,0,0,0.32), inset 0 0 0 0.05rem rgba(0,0,0,0.08);
     overflow: hidden;
     font-size: 0.9rem;
@@ -364,10 +357,27 @@ img:after {
     color: rgba(220,220,220, 0.6);
 }
 
+.explorer-box-content {
+}
+
+.explorer-box-images-title, .explorer-box-files-title {
+    margin-left: 0.5rem;
+    margin-top: 0.5rem;
+}
+
 .cred-divider {
     height: 0.05rem;
     margin-bottom: 1rem;
     width: calc(100% - 3rem);
+    background-color: rgba(220,220,220,0.3);
+}
+
+.side-divider {
+    height: 0.05rem;
+    margin-top: 1rem;
+    margin-bottom: 1.5rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
     background-color: rgba(220,220,220,0.3);
 }
 
@@ -419,7 +429,7 @@ img:after {
     right: 0;
     top: 0.75rem;
     border-radius: 0.5rem;
-    background-color: rgb(19,19,19);
+    background-color: rgb(12,12,12);
 }
 
 .option-toggle-circle {
@@ -449,7 +459,7 @@ img:after {
     top: -0.25rem;
     z-index: 2;
     border-radius: 2rem;
-    border-color: rgb(32,32,32);
+    border-color: rgb(26,26,26);
     border-style: solid;
     border-width: 1rem;
     background-color: rgba(0,0,0,0);
@@ -591,7 +601,7 @@ img:after {
 
 
 .search-form {
-    background-color: rgb(19,19,19);
+    background-color: rgb(12,12,12);
     height: 2.375rem;
     margin-top: 0.75rem;
     margin-bottom: 0.75rem;
@@ -603,7 +613,8 @@ img:after {
 
 .search-field {
     border: none;
-    outline: solid 0.0625rem rgb(40,40,40);
+    outline: none;
+    outline: solid 0.0625rem rgb(32,32,32);
     box-shadow: inset 0 0 0 0.05rem rgba(0,0,0,0.08);
     padding: 0;
     padding-left: 0.5rem;
@@ -612,7 +623,6 @@ img:after {
     font-size: 0.9rem;
     height: 100%;
     color: rgb(160,160,160);
-    transition: outline 0.15s ease;
 
     background-color: initial;
     min-width: initial;
@@ -628,9 +638,9 @@ img:after {
 }
 
 .search-field::placeholder {
-    color: rgba(220,220,220, 0.6);
+    color: rgba(220,220,220, 0.4);
 }
 
 .search-field::-ms-input-placeholder {
-    color: rgba(220,220,220, 0.6);
+    color: rgba(220,220,220, 0.4);
 }
